상단바 css 만듦

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <div class="container">
     <h1 class="title">To Do List</h1>
     <div class="input-box">
-      <input type="text">
+      <input type="text" placeholder="오늘의 할일">
       <button type="button">+</button>
     </div>
     <div class="tab-box">
-      <div>전체</div>
-      <div>진행중</div>
-      <div>끝남</div>
+      <div class="tab">전체</div>
+      <div class="tab">진행중</div>
+      <div class="tab">끝남</div>
     </div>
     <div class="todo-list">
       <div class="todo-item">
