--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">To Do List</h1>
+    <h1 class="title"><i class="fa-solid fa-list-check"></i> To Do List</h1>
     <section class="input-box">
       <input type="text" placeholder="오늘의 할일" id="todo-input">
-      <button type="button" id="add-btn">+</button>
+      <button type="button" id="add-btn" class="icon-btn"><i class="fa-solid fa-plus"></i></button>
     </section>
     <section class="tab-box">
       <div class="underline"></div>
@@ -36,6 +36,7 @@
 
   </div><!--container-->
 
+  <script src="https://kit.fontawesome.com/6e8d01699b.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
