목록 삭제 기능 만듦

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </section>
     <section class="tab-box">
       <div class="underline"></div>
-      <div class="tab">전체</div>
-      <div class="tab">진행중</div>
-      <div class="tab">끝남</div>
+      <div class="tab all">전체</div>
+      <div class="tab ongoing">진행중</div>
+      <div class="tab done">끝남</div>
     </section>
     <section class="todo-board">
       <!-- <div class="todo-list">
