--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <div class="container">
     <h1 class="title"><i class="fa-solid fa-list-check"></i> To Do List</h1>
     <section class="input-box">
-      <input type="text" placeholder="오늘의 할일" id="todo-input">
+      <input type="text" placeholder="오늘의 할일" id="todo-input" onkeyup="enterKey()">
       <button type="button" id="add-btn" class="icon-btn"><i class="fa-solid fa-plus"></i></button>
     </section>
     <section class="tab-box">
       <div class="underline"></div>
-      <div class="tab all">전체</div>
-      <div class="tab ongoing">진행중</div>
-      <div class="tab done">끝남</div>
+      <div class="tab" id="all">전체</div>
+      <div class="tab" id="ongoing">진행중</div>
+      <div class="tab" id="done">완료</div>
     </section>
     <section class="todo-board">
       <!-- <div class="todo-list">
