--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To Do List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="title"><i class="fa-solid fa-list-check"></i> To Do List</h1>
+    <h1 class="title"><i class="fa-solid fa-list-check"></i>To Do List</h1>
     <section class="input-box">
       <input type="text" placeholder="오늘의 할일" id="todo-input" onkeyup="enterKey()">
-      <button type="button" id="add-btn" class="icon-btn"><i class="fa-solid fa-plus"></i></button>
+      <div class="input-btn-box">
+        <button type="button" id="add-btn" class="icon-btn"><i class="fa-solid fa-plus"></i></button>
+        <button type="button" id="delete-all" class="icon-btn">전체삭제</button>
+      </div>
     </section>
     <section class="tab-box">
       <div class="underline"></div>
